@@ -1,5 +1,8 @@
 2006-06-08  Derek Price  <derek@ximbiot.com>
 
+	* sanity.sh: Look for the config file in more places and make it a
+	fatal error if an explicitly specified file is not found.
+
 	* server.c (requests): Add "Empty-conflicts" marker.
 	* client.c (send_fileproc): Send contents of all files with conflicts
 	unless the server can handle the conflict marker in the Entry.
